solc_mutator_ossfuzz_seed_corpus/test_sol/test_ddd1de8be40e29fc0bbf2eb5aea240569bccd376ac9a8f61dae3a38d24872b93_ec504f0c4bf064a44d9e90b2b1edc75453a485f1_sol.sol
==== Source:  ====

==== Source: su0.sol ====

==== Source: su1.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0(bool i0,bool i1)  returns(bool o0,address o1,bool o2)
{
  o2 = (~(((-19951626681513396293666186882885251734160625444348871134960262744736905035886 / -8692607814904005671887157398466725872591976528485374016739527388552640777356) * 42654487866286701690549653856132810025135486034929193847541210034086620106337)) < -(-11101525861383762001137856710313564280452716492033433027285036590781107838021));

}
// ----
// TypeError 4907: (su1.sol:122-367): Unary operator ~ cannot be applied to type rational_const 6078...(144 digits omitted)...2113 / 6209...(67 digits omitted)...6954
